@@ -875,112 +875,112 @@ fetch_data (struct disassemble_info *info, bfd_byte *addr)
 #define PREFIX_VEX_FC		(PREFIX_VEX_FB + 1)
 #define PREFIX_VEX_FD		(PREFIX_VEX_FC + 1)
 #define PREFIX_VEX_FE		(PREFIX_VEX_FD + 1)
-#define PREFIX_VEX_3800	(PREFIX_VEX_FE + 1)
-#define PREFIX_VEX_3801	(PREFIX_VEX_3800 + 1)
-#define PREFIX_VEX_3802	(PREFIX_VEX_3801 + 1)
-#define PREFIX_VEX_3803	(PREFIX_VEX_3802 + 1)
-#define PREFIX_VEX_3804	(PREFIX_VEX_3803 + 1)
-#define PREFIX_VEX_3805	(PREFIX_VEX_3804 + 1)
-#define PREFIX_VEX_3806	(PREFIX_VEX_3805 + 1)
-#define PREFIX_VEX_3807	(PREFIX_VEX_3806 + 1)
-#define PREFIX_VEX_3808	(PREFIX_VEX_3807 + 1)
-#define PREFIX_VEX_3809	(PREFIX_VEX_3808 + 1)
-#define PREFIX_VEX_380A	(PREFIX_VEX_3809 + 1)
-#define PREFIX_VEX_380B	(PREFIX_VEX_380A + 1)
-#define PREFIX_VEX_380C	(PREFIX_VEX_380B + 1)
-#define PREFIX_VEX_380D	(PREFIX_VEX_380C + 1)
-#define PREFIX_VEX_380E	(PREFIX_VEX_380D + 1)
-#define PREFIX_VEX_380F	(PREFIX_VEX_380E + 1)
-#define PREFIX_VEX_3817	(PREFIX_VEX_380F + 1)
-#define PREFIX_VEX_3818	(PREFIX_VEX_3817 + 1)
-#define PREFIX_VEX_3819	(PREFIX_VEX_3818 + 1)
-#define PREFIX_VEX_381A	(PREFIX_VEX_3819 + 1)
-#define PREFIX_VEX_381C	(PREFIX_VEX_381A + 1)
-#define PREFIX_VEX_381D	(PREFIX_VEX_381C + 1)
-#define PREFIX_VEX_381E	(PREFIX_VEX_381D + 1)
-#define PREFIX_VEX_3820	(PREFIX_VEX_381E + 1)
-#define PREFIX_VEX_3821	(PREFIX_VEX_3820 + 1)
-#define PREFIX_VEX_3822	(PREFIX_VEX_3821 + 1)
-#define PREFIX_VEX_3823	(PREFIX_VEX_3822 + 1)
-#define PREFIX_VEX_3824	(PREFIX_VEX_3823 + 1)
-#define PREFIX_VEX_3825	(PREFIX_VEX_3824 + 1)
-#define PREFIX_VEX_3828	(PREFIX_VEX_3825 + 1)
-#define PREFIX_VEX_3829	(PREFIX_VEX_3828 + 1)
-#define PREFIX_VEX_382A	(PREFIX_VEX_3829 + 1)
-#define PREFIX_VEX_382B	(PREFIX_VEX_382A + 1)
-#define PREFIX_VEX_382C	(PREFIX_VEX_382B + 1)
-#define PREFIX_VEX_382D	(PREFIX_VEX_382C + 1)
-#define PREFIX_VEX_382E	(PREFIX_VEX_382D + 1)
-#define PREFIX_VEX_382F	(PREFIX_VEX_382E + 1)
-#define PREFIX_VEX_3830	(PREFIX_VEX_382F + 1)
-#define PREFIX_VEX_3831	(PREFIX_VEX_3830 + 1)
-#define PREFIX_VEX_3832	(PREFIX_VEX_3831 + 1)
-#define PREFIX_VEX_3833	(PREFIX_VEX_3832 + 1)
-#define PREFIX_VEX_3834	(PREFIX_VEX_3833 + 1)
-#define PREFIX_VEX_3835	(PREFIX_VEX_3834 + 1)
-#define PREFIX_VEX_3837	(PREFIX_VEX_3835 + 1)
-#define PREFIX_VEX_3838	(PREFIX_VEX_3837 + 1)
-#define PREFIX_VEX_3839	(PREFIX_VEX_3838 + 1)
-#define PREFIX_VEX_383A	(PREFIX_VEX_3839 + 1)
-#define PREFIX_VEX_383B	(PREFIX_VEX_383A + 1)
-#define PREFIX_VEX_383C	(PREFIX_VEX_383B + 1)
-#define PREFIX_VEX_383D	(PREFIX_VEX_383C + 1)
-#define PREFIX_VEX_383E	(PREFIX_VEX_383D + 1)
-#define PREFIX_VEX_383F	(PREFIX_VEX_383E + 1)
-#define PREFIX_VEX_3840	(PREFIX_VEX_383F + 1)
-#define PREFIX_VEX_3841	(PREFIX_VEX_3840 + 1)
-#define PREFIX_VEX_3A04	(PREFIX_VEX_3841 + 1)
-#define PREFIX_VEX_3A05	(PREFIX_VEX_3A04 + 1)
-#define PREFIX_VEX_3A06	(PREFIX_VEX_3A05 + 1)
-#define PREFIX_VEX_3A08	(PREFIX_VEX_3A06 + 1)
-#define PREFIX_VEX_3A09	(PREFIX_VEX_3A08 + 1)
-#define PREFIX_VEX_3A0A	(PREFIX_VEX_3A09 + 1)
-#define PREFIX_VEX_3A0B	(PREFIX_VEX_3A0A + 1)
-#define PREFIX_VEX_3A0C	(PREFIX_VEX_3A0B + 1)
-#define PREFIX_VEX_3A0D	(PREFIX_VEX_3A0C + 1)
-#define PREFIX_VEX_3A0E	(PREFIX_VEX_3A0D + 1)
-#define PREFIX_VEX_3A0F	(PREFIX_VEX_3A0E + 1)
-#define PREFIX_VEX_3A14	(PREFIX_VEX_3A0F + 1)
-#define PREFIX_VEX_3A15	(PREFIX_VEX_3A14 + 1)
-#define PREFIX_VEX_3A16	(PREFIX_VEX_3A15 + 1)
-#define PREFIX_VEX_3A17	(PREFIX_VEX_3A16 + 1)
-#define PREFIX_VEX_3A18	(PREFIX_VEX_3A17 + 1)
-#define PREFIX_VEX_3A19	(PREFIX_VEX_3A18 + 1)
-#define PREFIX_VEX_3A20	(PREFIX_VEX_3A19 + 1)
-#define PREFIX_VEX_3A21	(PREFIX_VEX_3A20 + 1)
-#define PREFIX_VEX_3A22	(PREFIX_VEX_3A21 + 1)
-#define PREFIX_VEX_3A40	(PREFIX_VEX_3A22 + 1)
-#define PREFIX_VEX_3A41	(PREFIX_VEX_3A40 + 1)
-#define PREFIX_VEX_3A42	(PREFIX_VEX_3A41 + 1)
-#define PREFIX_VEX_3A48	(PREFIX_VEX_3A42 + 1)
-#define PREFIX_VEX_3A49	(PREFIX_VEX_3A48 + 1)
-#define PREFIX_VEX_3A4A	(PREFIX_VEX_3A49 + 1)
-#define PREFIX_VEX_3A4B	(PREFIX_VEX_3A4A + 1)
-#define PREFIX_VEX_3A4C	(PREFIX_VEX_3A4B + 1)
-#define PREFIX_VEX_3A5C	(PREFIX_VEX_3A4C + 1)
-#define PREFIX_VEX_3A5D	(PREFIX_VEX_3A5C + 1)
-#define PREFIX_VEX_3A5E	(PREFIX_VEX_3A5D + 1)
-#define PREFIX_VEX_3A5F	(PREFIX_VEX_3A5E + 1)
-#define PREFIX_VEX_3A60	(PREFIX_VEX_3A5F + 1)
-#define PREFIX_VEX_3A61	(PREFIX_VEX_3A60 + 1)
-#define PREFIX_VEX_3A62	(PREFIX_VEX_3A61 + 1)
-#define PREFIX_VEX_3A63	(PREFIX_VEX_3A62 + 1)
-#define PREFIX_VEX_3A68	(PREFIX_VEX_3A63 + 1)
-#define PREFIX_VEX_3A69	(PREFIX_VEX_3A68 + 1)
-#define PREFIX_VEX_3A6A	(PREFIX_VEX_3A69 + 1)
-#define PREFIX_VEX_3A6B	(PREFIX_VEX_3A6A + 1)
-#define PREFIX_VEX_3A6C	(PREFIX_VEX_3A6B + 1)
-#define PREFIX_VEX_3A6D	(PREFIX_VEX_3A6C + 1)
-#define PREFIX_VEX_3A6E	(PREFIX_VEX_3A6D + 1)
-#define PREFIX_VEX_3A6F	(PREFIX_VEX_3A6E + 1)
-#define PREFIX_VEX_3A78	(PREFIX_VEX_3A6F + 1)
-#define PREFIX_VEX_3A79	(PREFIX_VEX_3A78 + 1)
-#define PREFIX_VEX_3A7A	(PREFIX_VEX_3A79 + 1)
-#define PREFIX_VEX_3A7B	(PREFIX_VEX_3A7A + 1)
-#define PREFIX_VEX_3A7C	(PREFIX_VEX_3A7B + 1)
-#define PREFIX_VEX_3A7D	(PREFIX_VEX_3A7C + 1)
-#define PREFIX_VEX_3A7E	(PREFIX_VEX_3A7D + 1)
-#define PREFIX_VEX_3A7F	(PREFIX_VEX_3A7E + 1)
+#define PREFIX_VEX_3800		(PREFIX_VEX_FE + 1)
+#define PREFIX_VEX_3801		(PREFIX_VEX_3800 + 1)
+#define PREFIX_VEX_3802		(PREFIX_VEX_3801 + 1)
+#define PREFIX_VEX_3803		(PREFIX_VEX_3802 + 1)
+#define PREFIX_VEX_3804		(PREFIX_VEX_3803 + 1)
+#define PREFIX_VEX_3805		(PREFIX_VEX_3804 + 1)
+#define PREFIX_VEX_3806		(PREFIX_VEX_3805 + 1)
+#define PREFIX_VEX_3807		(PREFIX_VEX_3806 + 1)
+#define PREFIX_VEX_3808		(PREFIX_VEX_3807 + 1)
+#define PREFIX_VEX_3809		(PREFIX_VEX_3808 + 1)
+#define PREFIX_VEX_380A		(PREFIX_VEX_3809 + 1)
+#define PREFIX_VEX_380B		(PREFIX_VEX_380A + 1)
+#define PREFIX_VEX_380C		(PREFIX_VEX_380B + 1)
+#define PREFIX_VEX_380D		(PREFIX_VEX_380C + 1)
+#define PREFIX_VEX_380E		(PREFIX_VEX_380D + 1)
+#define PREFIX_VEX_380F		(PREFIX_VEX_380E + 1)
+#define PREFIX_VEX_3817		(PREFIX_VEX_380F + 1)
+#define PREFIX_VEX_3818		(PREFIX_VEX_3817 + 1)
+#define PREFIX_VEX_3819		(PREFIX_VEX_3818 + 1)
+#define PREFIX_VEX_381A		(PREFIX_VEX_3819 + 1)
+#define PREFIX_VEX_381C		(PREFIX_VEX_381A + 1)
+#define PREFIX_VEX_381D		(PREFIX_VEX_381C + 1)
+#define PREFIX_VEX_381E		(PREFIX_VEX_381D + 1)
+#define PREFIX_VEX_3820		(PREFIX_VEX_381E + 1)
+#define PREFIX_VEX_3821		(PREFIX_VEX_3820 + 1)
+#define PREFIX_VEX_3822		(PREFIX_VEX_3821 + 1)
+#define PREFIX_VEX_3823		(PREFIX_VEX_3822 + 1)
+#define PREFIX_VEX_3824		(PREFIX_VEX_3823 + 1)
+#define PREFIX_VEX_3825		(PREFIX_VEX_3824 + 1)
+#define PREFIX_VEX_3828		(PREFIX_VEX_3825 + 1)
+#define PREFIX_VEX_3829		(PREFIX_VEX_3828 + 1)
+#define PREFIX_VEX_382A		(PREFIX_VEX_3829 + 1)
+#define PREFIX_VEX_382B		(PREFIX_VEX_382A + 1)
+#define PREFIX_VEX_382C		(PREFIX_VEX_382B + 1)
+#define PREFIX_VEX_382D		(PREFIX_VEX_382C + 1)
+#define PREFIX_VEX_382E		(PREFIX_VEX_382D + 1)
+#define PREFIX_VEX_382F		(PREFIX_VEX_382E + 1)
+#define PREFIX_VEX_3830		(PREFIX_VEX_382F + 1)
+#define PREFIX_VEX_3831		(PREFIX_VEX_3830 + 1)
+#define PREFIX_VEX_3832		(PREFIX_VEX_3831 + 1)
+#define PREFIX_VEX_3833		(PREFIX_VEX_3832 + 1)
+#define PREFIX_VEX_3834		(PREFIX_VEX_3833 + 1)
+#define PREFIX_VEX_3835		(PREFIX_VEX_3834 + 1)
+#define PREFIX_VEX_3837		(PREFIX_VEX_3835 + 1)
+#define PREFIX_VEX_3838		(PREFIX_VEX_3837 + 1)
+#define PREFIX_VEX_3839		(PREFIX_VEX_3838 + 1)
+#define PREFIX_VEX_383A		(PREFIX_VEX_3839 + 1)
+#define PREFIX_VEX_383B		(PREFIX_VEX_383A + 1)
+#define PREFIX_VEX_383C		(PREFIX_VEX_383B + 1)
+#define PREFIX_VEX_383D		(PREFIX_VEX_383C + 1)
+#define PREFIX_VEX_383E		(PREFIX_VEX_383D + 1)
+#define PREFIX_VEX_383F		(PREFIX_VEX_383E + 1)
+#define PREFIX_VEX_3840		(PREFIX_VEX_383F + 1)
+#define PREFIX_VEX_3841		(PREFIX_VEX_3840 + 1)
+#define PREFIX_VEX_3A04		(PREFIX_VEX_3841 + 1)
+#define PREFIX_VEX_3A05		(PREFIX_VEX_3A04 + 1)
+#define PREFIX_VEX_3A06		(PREFIX_VEX_3A05 + 1)
+#define PREFIX_VEX_3A08		(PREFIX_VEX_3A06 + 1)
+#define PREFIX_VEX_3A09		(PREFIX_VEX_3A08 + 1)
+#define PREFIX_VEX_3A0A		(PREFIX_VEX_3A09 + 1)
+#define PREFIX_VEX_3A0B		(PREFIX_VEX_3A0A + 1)
+#define PREFIX_VEX_3A0C		(PREFIX_VEX_3A0B + 1)
+#define PREFIX_VEX_3A0D		(PREFIX_VEX_3A0C + 1)
+#define PREFIX_VEX_3A0E		(PREFIX_VEX_3A0D + 1)
+#define PREFIX_VEX_3A0F		(PREFIX_VEX_3A0E + 1)
+#define PREFIX_VEX_3A14		(PREFIX_VEX_3A0F + 1)
+#define PREFIX_VEX_3A15		(PREFIX_VEX_3A14 + 1)
+#define PREFIX_VEX_3A16		(PREFIX_VEX_3A15 + 1)
+#define PREFIX_VEX_3A17		(PREFIX_VEX_3A16 + 1)
+#define PREFIX_VEX_3A18		(PREFIX_VEX_3A17 + 1)
+#define PREFIX_VEX_3A19		(PREFIX_VEX_3A18 + 1)
+#define PREFIX_VEX_3A20		(PREFIX_VEX_3A19 + 1)
+#define PREFIX_VEX_3A21		(PREFIX_VEX_3A20 + 1)
+#define PREFIX_VEX_3A22		(PREFIX_VEX_3A21 + 1)
+#define PREFIX_VEX_3A40		(PREFIX_VEX_3A22 + 1)
+#define PREFIX_VEX_3A41		(PREFIX_VEX_3A40 + 1)
+#define PREFIX_VEX_3A42		(PREFIX_VEX_3A41 + 1)
+#define PREFIX_VEX_3A48		(PREFIX_VEX_3A42 + 1)
+#define PREFIX_VEX_3A49		(PREFIX_VEX_3A48 + 1)
+#define PREFIX_VEX_3A4A		(PREFIX_VEX_3A49 + 1)
+#define PREFIX_VEX_3A4B		(PREFIX_VEX_3A4A + 1)
+#define PREFIX_VEX_3A4C		(PREFIX_VEX_3A4B + 1)
+#define PREFIX_VEX_3A5C		(PREFIX_VEX_3A4C + 1)
+#define PREFIX_VEX_3A5D		(PREFIX_VEX_3A5C + 1)
+#define PREFIX_VEX_3A5E		(PREFIX_VEX_3A5D + 1)
+#define PREFIX_VEX_3A5F		(PREFIX_VEX_3A5E + 1)
+#define PREFIX_VEX_3A60		(PREFIX_VEX_3A5F + 1)
+#define PREFIX_VEX_3A61		(PREFIX_VEX_3A60 + 1)
+#define PREFIX_VEX_3A62		(PREFIX_VEX_3A61 + 1)
+#define PREFIX_VEX_3A63		(PREFIX_VEX_3A62 + 1)
+#define PREFIX_VEX_3A68		(PREFIX_VEX_3A63 + 1)
+#define PREFIX_VEX_3A69		(PREFIX_VEX_3A68 + 1)
+#define PREFIX_VEX_3A6A		(PREFIX_VEX_3A69 + 1)
+#define PREFIX_VEX_3A6B		(PREFIX_VEX_3A6A + 1)
+#define PREFIX_VEX_3A6C		(PREFIX_VEX_3A6B + 1)
+#define PREFIX_VEX_3A6D		(PREFIX_VEX_3A6C + 1)
+#define PREFIX_VEX_3A6E		(PREFIX_VEX_3A6D + 1)
+#define PREFIX_VEX_3A6F		(PREFIX_VEX_3A6E + 1)
+#define PREFIX_VEX_3A78		(PREFIX_VEX_3A6F + 1)
+#define PREFIX_VEX_3A79		(PREFIX_VEX_3A78 + 1)
+#define PREFIX_VEX_3A7A		(PREFIX_VEX_3A79 + 1)
+#define PREFIX_VEX_3A7B		(PREFIX_VEX_3A7A + 1)
+#define PREFIX_VEX_3A7C		(PREFIX_VEX_3A7B + 1)
+#define PREFIX_VEX_3A7D		(PREFIX_VEX_3A7C + 1)
+#define PREFIX_VEX_3A7E		(PREFIX_VEX_3A7D + 1)
+#define PREFIX_VEX_3A7F		(PREFIX_VEX_3A7E + 1)
 
 #define X86_64_06		0
 #define X86_64_07		(X86_64_06 + 1)
